[package]
name = "lau-room-acoustics"
version = "0.1.0"
edition = "2021"
description = "Room acoustics for PLATO — reverb, resonance, standing waves"
license = "MIT"

[lib]
name = "lau_room_acoustics"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
